<resources>
    <string name="app_name">Student Management</string>
    <string name="name">Name Here!!!</string>
    <string name="UserName">UserName</string>
    <string name="icon">icon</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Main_UserName">User Name</string>
    <string name="Main_Birthday">Birthday</string>
    <string name="Phone">Phone</string>
    <string name="Code">Code</string>
    <string name="Address">Address</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Update">Update</string>
    <string name="Menu">Menu</string>
    <string name="Contact">Contact</string>
</resources>